--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,9 +32,8 @@ html{
 {
     transition: all 0.5s;
     transition-timing-function: ease-in-out;
-    border: 50px solid black;
     border-radius: 100px;
-    filter: invert(100%);
+    filter: drop-shadow(16px 16px 20px white) invert(100%);
 }
 .card:not(:hover)
 {
@@ -42,6 +41,17 @@ html{
     transition-timing-function: ease-in-out;
     background-color: black;
     color: white;
-    border: 0px solid black;
     border-radius: 0px black;
+}
+
+.i:hover
+{
+    transition: all 0.3s;
+    transition-timing-function: ease-in-out;
+    filter: drop-shadow(0px 0px 10px rgb(127,255,127));
+}
+.i:not(:hover)
+{
+    transition: all 0.3s;
+    transition-timing-function: ease-in-out;
 }
