--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,13 +1,31 @@
-html{
+html
+{
     height: 100vh;
     background: linear-gradient(to bottom, #7927b2, #fb3182);
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  a { 
-    color: black;
 }
+a 
+{ 
+    color: black;
+    margin: 0px;
+    padding: 0px;
+    width: 0px;
+    height: 0px;
+}
+a:hover
+{
+    transition: all 0.3s;
+    transition-timing-function: ease-in-out;
+    filter: drop-shadow(0px 0px 10px rgb(127,255,127));
+}
+a:not(:hover)
+{
+    transition: all 0.3s;
+    transition-timing-function: ease-in-out;
+}
+
 .card
 {
     padding-left: 10%;
@@ -22,8 +40,6 @@ html{
     background-color: black;
     font-size: xx-large;
     position: fixed;
-    top: 50%;
-    left: 50%;
     transform: translate(-50%, -50%);
     font-family: Helvetica;
     border-radius: 0px black;
@@ -42,16 +58,4 @@ html{
     background-color: black;
     color: white;
     border-radius: 0px black;
-}
-
-.i:hover
-{
-    transition: all 0.3s;
-    transition-timing-function: ease-in-out;
-    filter: drop-shadow(0px 0px 10px rgb(127,255,127));
-}
-.i:not(:hover)
-{
-    transition: all 0.3s;
-    transition-timing-function: ease-in-out;
 }
