--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -70,6 +70,7 @@ html::-webkit-scrollbar-thumb
     filter: invert(100%);
     width: 100%;
     height: fit-content;
+    display: block;
     transition: all 0.5s;
     transition-timing-function: ease-in-out;
 }
