Fixed gulp not feeding correct data to pug file

--- a/src/index.pug
+++ b/src/index.pug
@@ -7,7 +7,7 @@ html(lang="en")
 
         link(rel="stylesheet", href="css/style.css")
 
-        title Document
+        title= title
     body
-        h1 Hello World!
+        h1 Hello World
         p Welcome to my base page
