--- a/src/index.pug
+++ b/src/index.pug
@@ -1,13 +1,5 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+extends layout.pug
 
-        link(rel="stylesheet", href="css/style.css")
-
-        title= title
-    body
-        h1 Hello World 
-        p Welcome to my base page
+block content
+    h1 Hello World 
+    p Welcome to my base page
